system/iptables/ip6tables.rules
# Generated by ip6tables-save v1.8.11 on Sun Apr 20 12:50:36 2025
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p udp -m udp --sport 547 --dport 546 -j ACCEPT
-A INPUT -p udp -m udp --sport 5353 --dport 5353 -j ACCEPT
-A INPUT -p udp -m udp --sport 22000 --dport 22000 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 22000 --dport 22000 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -p udp -j REJECT --reject-with icmp6-port-unreachable
-A INPUT -j REJECT --reject-with icmp6-adm-prohibited
COMMIT
# Completed on Sun Apr 20 12:50:36 2025
